main Login ko desgin kia hai

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Admin Login</title>
+    <title>Simple Login</title>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
@@ -16,19 +15,186 @@
 </head>
 
 <body>
-    <section class="">
-        <div class="_wrapper">
-            <div class="container">
-              <h1>hello</h1>
-              <a href="admin">qwertyui</a>
-            </div>
+    <section>
+        <!-- Login -->
+        <div class="Login_main wrapper" id="Login_main">
+            <h1>Login</h1>
+            <p id="error-message"></p>
+            <form id="form">
+                <div>
+                    <label for="email-input">
+                        <span>@</span>
+                    </label>
+                    <input type="email" name="email" id="email-input" placeholder="Email">
+                </div>
+                <div>
+                    <label for="password-input">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                            <path
+                                d="M240-80q-33 0-56.5-23.5T160-160v-400q0-33 23.5-56.5T240-640h40v-80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720v80h40q33 0 56.5 23.5T800-560v400q0 33-23.5 56.5T720-80H240Zm240-200q33 0 56.5-23.5T560-360q0-33-23.5-56.5T480-440q-33 0-56.5 23.5T400-360q0 33 23.5 56.5T480-280ZM360-640h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80Z" />
+                        </svg>
+                    </label>
+                    <input type="password" name="password" id="password-input" placeholder="Password">
+                </div>
+                <button type="submit">Login</button>
+            </form>
+            <p>New here? <a id="Open_Signup" href="#">Create an Account</a></p>
+        </div>
+        <!-- Signup  -->
+
+        <div class="Signup_main wrapper d-none" id="Signup_main">
+            <h1>Signup</h1>
+            <p id="error-message"></p>
+            <form id="form">
+                <div>
+                    <label for="firstname-input">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                            <path
+                                d="M480-480q-66 0-113-47t-47-113q0-66 47-113t113-47q66 0 113 47t47 113q0 66-47 113t-113 47ZM160-160v-112q0-34 17.5-62.5T224-378q62-31 126-46.5T480-440q66 0 130 15.5T736-378q29 15 46.5 43.5T800-272v112H160Z" />
+                        </svg>
+                    </label>
+                    <input type="text" name="firstname" id="firstname-input" placeholder="Firstname">
+                </div>
+                <div>
+                    <label for="email-input">
+                        <span>@</span>
+                    </label>
+                    <input type="email" name="email" id="email-input" placeholder="Email">
+                </div>
+                <div>
+                    <label for="password-input">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                            <path
+                                d="M240-80q-33 0-56.5-23.5T160-160v-400q0-33 23.5-56.5T240-640h40v-80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720v80h40q33 0 56.5 23.5T800-560v400q0 33-23.5 56.5T720-80H240Zm240-200q33 0 56.5-23.5T560-360q0-33-23.5-56.5T480-440q-33 0-56.5 23.5T400-360q0 33 23.5 56.5T480-280ZM360-640h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80Z" />
+                        </svg>
+                    </label>
+                    <input type="password" name="password" id="password-input" placeholder="Password">
+                </div>
+                <div>
+                    <label for="repeat-password-input">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
+                            <path
+                                d="M240-80q-33 0-56.5-23.5T160-160v-400q0-33 23.5-56.5T240-640h40v-80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720v80h40q33 0 56.5 23.5T800-560v400q0 33-23.5 56.5T720-80H240Zm240-200q33 0 56.5-23.5T560-360q0-33-23.5-56.5T480-440q-33 0-56.5 23.5T400-360q0 33 23.5 56.5T480-280ZM360-640h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80Z" />
+                        </svg>
+                    </label>
+                    <input type="password" name="repeat-password" id="repeat-password-input"
+                        placeholder="Repeat Password">
+                </div>
+                <button type="submit">Signup</button>
+            </form>
+            <p>Already have an Account? <a id="Open_Login" href="#">login</a> </p>
         </div>
     </section>
 
-    <script src="js/main.js"></script>
+
     <!-- Bootstrap JS & Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--  -->
+    <script>
+        var Login_main = document.getElementById('Login_main');
+        var Signup_main = document.getElementById('Signup_main');
+        // a href link 
+        var Open_Signup = document.getElementById('Open_Signup');
+        var Open_Login = document.getElementById('Open_Login');
 
+        // Add event listener for Open_Signup link
+        Open_Signup.addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default anchor behavior
+            Login_main.classList.add('d-none'); // Hide login form
+            Signup_main.classList.remove('d-none'); // Show signup form
+        });
+
+        // Add event listener for Open_Login link
+        Open_Login.addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default anchor behavior
+            Signup_main.classList.add('d-none'); // Hide signup form
+            Login_main.classList.remove('d-none'); // Show login form
+        });
+
+    </script>
+    <!-- validation -->
+    <script>
+        const form = document.getElementById('form')
+        const firstname_input = document.getElementById('firstname-input')
+        const email_input = document.getElementById('email-input')
+        const password_input = document.getElementById('password-input')
+        const repeat_password_input = document.getElementById('repeat-password-input')
+        const error_message = document.getElementById('error-message')
+
+        form.addEventListener('submit', (e) => {
+            let errors = []
+
+            if (firstname_input) {
+                // If we have a firstname input then we are in the signup
+                errors = getSignupFormErrors(firstname_input.value, email_input.value, password_input.value, repeat_password_input.value)
+            }
+            else {
+                // If we don't have a firstname input then we are in the login
+                errors = getLoginFormErrors(email_input.value, password_input.value)
+            }
+
+            if (errors.length > 0) {
+                // If there are any errors
+                e.preventDefault()
+                error_message.innerText = errors.join(". ")
+            }
+        })
+
+        function getSignupFormErrors(firstname, email, password, repeatPassword) {
+            let errors = []
+
+            if (firstname === '' || firstname == null) {
+                errors.push('Firstname is required')
+                firstname_input.parentElement.classList.add('incorrect')
+            }
+            if (email === '' || email == null) {
+                errors.push('Email is required')
+                email_input.parentElement.classList.add('incorrect')
+            }
+            if (password === '' || password == null) {
+                errors.push('Password is required')
+                password_input.parentElement.classList.add('incorrect')
+            }
+            if (password.length < 8) {
+                errors.push('Password must have at least 8 characters')
+                password_input.parentElement.classList.add('incorrect')
+            }
+            if (password !== repeatPassword) {
+                errors.push('Password does not match repeated password')
+                password_input.parentElement.classList.add('incorrect')
+                repeat_password_input.parentElement.classList.add('incorrect')
+            }
+
+
+            return errors;
+        }
+
+        function getLoginFormErrors(email, password) {
+            let errors = []
+
+            if (email === '' || email == null) {
+                errors.push('Email is required')
+                email_input.parentElement.classList.add('incorrect')
+            }
+            if (password === '' || password == null) {
+                errors.push('Password is required')
+                password_input.parentElement.classList.add('incorrect')
+            }
+
+            return errors;
+        }
+
+        const allInputs = [firstname_input, email_input, password_input, repeat_password_input].filter(input => input != null)
+
+        allInputs.forEach(input => {
+            input.addEventListener('input', () => {
+                if (input.parentElement.classList.contains('incorrect')) {
+                    input.parentElement.classList.remove('incorrect')
+                    error_message.innerText = ''
+                }
+            })
+        })
+    </script>
 </body>
 
 </html>
